--- a/assets/sass/core/_colors.sass
+++ b/assets/sass/core/_colors.sass
@@ -1,18 +1,28 @@
 // Colors
 
+// @include single-color-swatch(class, color, lightColor, darkColor)
+@mixin single-color-swatch($class, $color, $light-color, $dark-color)
+  &.#{$class}
+    background-color: $color
+  &.light-#{$class}
+    background-color: $light-color
+  &.dark-#{$class}
+    background-color: $dark-color
+
+
 
 /* Color Swatches */
 @mixin color-swatches
 
   %color-box-all
-    border: 1px solid #DDD
-    box-sizing: border-box
+    border: 1px solid $lighter-grey
+    @include box-sizing
     display: block
 
   .color-box
     @extend %color-box-all
     float: left
-    margin: 1em 2em 1em 0
+    margin: 1em 1em 1em 0
     position: relative
     width: 100px
 
@@ -20,60 +30,36 @@
     @extend %color-box-all
     background-color: transparent
     border: none
-    height: 100px
+    height: 60px
     &.black
-      background-color: #000
-    &.grey
-      background-color: #999
-    &.dark-grey
-      background-color: #555
-    &.light-grey
-      background-color: #DDD
-    &.red
-      background-color: #CC583A
-    &.dark-red
-      background-color: none
-    &.light-red
-      background-color: #FFE3E1
-    &.blue
-      background-color: #272D7F
-    &.dark-blue
-      background-color: none
-    &.light-blue
-      background-color: #DDDFFF
-    &.purple
-      background-color: #7F4D7B
-    &.dark-purple
-      background-color: none
-    &.light-purple
-      background-color: #FFDCFC
-    &.green
-      background-color: #277F35
-    &.dark-green
-      background-color: none
-    &.light-green
-      background-color: #DFFFE4
-    &.orange
-      background-color: #FE9300
-    &.dark-orange
-      background-color: none
-    &.light-orange
-      background-color: #FFEFDD
+      background-color: $black
+
+    @include single-color-swatch(grey, $grey, $light-grey, $dark-grey)
+    @include single-color-swatch(red, $red, $light-red, $dark-red)
+    @include single-color-swatch(blue, $blue, $light-blue, $dark-blue)
+    @include single-color-swatch(purple, $purple, $light-purple, $dark-purple)
+    @include single-color-swatch(green, $green, $light-green, $dark-green)
+    @include single-color-swatch(orange, $orange, $light-orange, $dark-orange)
 
   .color-code
     @extend %color-box-all
     border: none
+    display: block
     position: absolute
-    top: 5px
-    left: 5px
+    top: 10px
+    left: 0
     color: #FFF
-    font-size: 14px
-    padding: 2px 3px
+    font-size: 12px
     text-align: center
+    width: 100%
+    .color-code-rgb
+      display: block
+      font-size: 10px
+      margin-top: 5px
 
   .color-name
     @extend %color-box-all
     border: none
-    font-size: 14px
+    font-size: 12px
     padding: 5px 3px
     text-align: center
