--- a/includes/_header.html
+++ b/includes/_header.html
@@ -5,9 +5,10 @@
       <h1>Centurion Framework <small>(v3.5.0)</small></h1>
       <nav id="main" class="mobile">
         <ul>
-          <li><a href="<!-- @path index.html -->">Home</a></li>
-          <li><a href="<!-- @path features.html -->">Features</a></li>
-          <li><a href="<!-- @path grid.html -->">Grid</a></li>
+          <li><a href="<!-- @path index -->">Home</a></li>
+          <li><a href="<!-- @path grid -->">Grid</a></li>
+          <li><a href="<!-- @path features -->">Features</a></li>
+          <li><a href="<!-- @path components -->">Components</a></li>
         </ul>
       </nav>
       
