--- a/includes/_layout-top.html
+++ b/includes/_layout-top.html
@@ -4,7 +4,7 @@
 	<title><!-- $title --> | Centurion - A CSS Web Framework</title>
    
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge" /> -->
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
 
   <link rel="shortcut icon" href="assets/img/favicon.jpg" />
