--- a/includes/_scripts.html
+++ b/includes/_scripts.html
@@ -1,36 +1,53 @@
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
-<!-- @javascript centurion.js -->
+<!-- <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script> -->
+
+<!-- @javascript jquery-1.11.0.min jquery-migrate-1.2.1.min -->
+<!-- @javascript centurion grid-calculate -->
 
 
 <script type="text/javascript">
-  $(document).ready(function(){
-  
-    $('.calculate [class*="grid-"]').append('<span class="box-grid"><span class="pixels"></span></span>')
-    //$('.calculate [class*="grid-"]').append('<span class="box-grid"><span class="grid-class"></span><br /><span class="pixels"></span></span>')
+$(document).ready(function(){
+    htmlStructure = '<div class="color-box">'+
+    '<span class="color-swatch"></span>'+
+    '<span class="color-code">'+
+      '<span class="color-code-hex"></span><br />'+
+      '<span class="color-code-rgb"></span>'+
+    '</span>'+
+    '<span class="color-name"></span>'+
+    '</div>';
     
-    function gridCalculate() {
-      $('.calculate [class*="grid-"]').each(function(){
-        var el = $(this);
-        var width = el.innerWidth()-20 + 'px';
-        var gridClass = $(this).attr('class');
-        el.find('span.pixels').html(width);
-        //el.find('span.grid-class').html(gridClass);
-      });
- 
-    }
-    width = $(document).width();
-    
-    $(function() {
-        gridCalculate($(this).width());
-        $(window).resize(function() {
-          gridCalculate($(this).width());
-        });
-    });
+    $('#colors div[data-color]').append(htmlStructure);
 
-  });  
+    //$('#colors div[data-color]').after('<div class="clear"></div>');  
+    $('#colors div[data-color]').each(function(){
+      
+      data = $(this).attr('data-color');
+      colorClass = data;
+      bkColorClass = data;
+      
+      $(this).find('.color-swatch').addClass(bkColorClass);
+      
+      // Grab background color value for current item - returns RGB
+      colorValue = $(this).find('.color-swatch').css('backgroundColor');
+
+      //Convert HEX to RGB
+      var rgbValue = colorValue;
+      var parts = rgbValue.match(/^rgb\((\d+),\s*(\d+),\s*(\d+)\)$/);
+      delete (parts[0]);
+      for (var i = 1; i <= 3; ++i) {
+          parts[i] = parseInt(parts[i]).toString(16);
+          if (parts[i].length == 1) parts[i] = '0' + parts[i];
+      } 
+      var hexValue ='#'+parts.join('').toUpperCase();
+
+      // Return HTMl to page      
+      $(this).find('.color-code-hex').addClass(colorClass).html(hexValue);
+      $(this).find('.color-code-rgb').addClass(colorClass).html(rgbValue);
+      $(this).find('.color-name').addClass(colorClass).html(data);
+    });
+}); 
 </script>
 
 
-<!--[if lt IE 9]><!-- javascript modernizr-2.6.2-custom-min --><![endif]-->
+<!--[if lt IE 9]><!-- @javascript modernizr.2.8.3 --><![endif]-->
 <!--[if lte IE 7]><script src="assets/js/lte-ie7.js"></script><![endif]-->
 
