added custom stylesheet to head

--- a/includes/_styles.html
+++ b/includes/_styles.html
@@ -1,4 +1,4 @@
 <!-- stylesheet reset -->
 <!-- Centurion Framework -->
-<!-- @stylesheet centurion -->
+<!-- @stylesheet centurion custom -->
 <!-- End of Framework -->
