Removing "px" from default font size variable

--- a/assets/sass/core/_config.sass
+++ b/assets/sass/core/_config.sass
@@ -1,6 +1,6 @@
 // Fonts
 $font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif
-$default-font-size: 16px
+$default-font-size: 16
 $default-line-height: 1
 
 $ie7-support: false
