--- a/assets/sass/core/_mixin.sass
+++ b/assets/sass/core/_mixin.sass
@@ -2,6 +2,34 @@
 // Mixins
 // --------------------------------------------------
 
+// REM Conversion (with PX Fallback)
+// ----------------------------
+// +rem(font-size, 32)
+@function remove-unit($num)
+  @return $num / ($num * 0 + 1)
+
+=rem($property, $values)
+  $total: length($values)
+  $px-value: ""
+  $rem-value: ""
+  
+  @for $i from 1 through $total
+    $value: remove-unit(nth($values, $i))
+    $px-value: #{$px-value + $value}px
+    @if $i < $total
+      $px-value: #{$px-value + " "}
+  
+  @for $i from 1 through $total
+    //$font-size: remove-unit(nth($default-font-size))
+    $value: remove-unit(nth($values, $i))
+    $rem-value: #{$rem-value + $value / $default-font-size}rem
+    @if $i < $total
+      $rem-value: #{$rem-value + " "}
+  
+  #{$property}: $px-value
+  #{$property}: $rem-value
+
+  
 
 // Box Sizing
 // ----------------------------
