updated px values to use REMs (with fallback). Body font size 100%

--- a/assets/sass/centurion.sass
+++ b/assets/sass/centurion.sass
@@ -12,7 +12,7 @@
 @import "core/mixin"
 
 body
-  font-size: $default-font-size
+  font-size: 100%
   line-height: $default-line-height
 
 @import "core/normalize"
