--- a/includes/_features/_typography.html
+++ b/includes/_features/_typography.html
@@ -3,21 +3,24 @@
   <h2>Typography</h2>
   <p>______</p>
   
-  <div class="grid-12">
-    <h1>Standard h1</h1>
-    <h2>Standard h2</h2>
-    <h3>Standard h3</h3>
-    <h4>Standard h4</h4>
-    <h5>Standard h5</h5>
-    <h6>Standard h6</h6>
+  <div class="grid-8">
+    <h1>h1. Standard h1</h1>
+    <h2>h2. Standard h2</h2>
+    <h3>h3. Standard h3</h3>
+    <h4>h4. Standard h4</h4>
+    <h5>h5. Standard h5</h5>
+    <h6>h6. Standard h6</h6>
   </div>
 
-  <div class="grid-12">
-    <p class="text-large">Large paragraph text to callout something special.</p>
-    <p>Standard paragraph text for all over the place.</p>
-    <p class="text-small">Small paragraph text for making a minute point.</p>
-  
-    <p class="text-muted">Muted paragraph text to make less of a point.</p>
+  <div class="grid-16">
+
+    <p class="text-large">Lorem ipsum dolor sit amet, emphasis consectetuer adipiscing elit. Nullam dignissim convallis est. Quisque aliquam. Donec faucibus. Nunc iaculis suscipit dui. Nam sit amet sem. Aliquam libero nisi, imperdiet at, tincidunt nec, gravida vehicula, nisl.</p>
+    
+    <p>Lorem ipsum dolor sit amet, emphasis consectetuer adipiscing elit. Nullam dignissim convallis est. Quisque aliquam. Donec faucibus. Nunc iaculis suscipit dui. Nam sit amet sem. Aliquam libero nisi, imperdiet at, tincidunt nec, gravida vehicula, nisl. Praesent mattis, massa quis luctus fermentum, turpis mi volutpat justo, eu volutpat enim diam eget metus. Maecenas ornare tortor. Donec sed tellus eget sapien fringilla nonummy. Mauris a ante. Suspendisse quam sem, consequat at, commodo vitae, feugiat in, nunc. Morbi imperdiet augue quis tellus.</p>
+    
+    <p class="text-small">Turpis mi volutpat justo, eu volutpat enim diam eget metus. Maecenas ornare tortor. Donec sed tellus eget sapien fringilla nonummy. Mauris a ante. Suspendisse quam sem, consequat at, commodo vitae, feugiat in, nunc. Morbi imperdiet augue quis tellus.</p>
+    
+    <p class="text-muted">Nam sit amet sem. Aliquam libero nisi, imperdiet at, tincidunt nec, gravida vehicula, nisl. Praesent mattis, massa quis luctus fermentum, turpis mi volutpat justo, eu volutpat enim diam eget metus. Maecenas ornare tortor. Donec sed tellus eget sapien fringilla nonummy. Mauris a ante. Suspendisse quam sem, consequat at, commodo vitae, feugiat in, nunc. Morbi imperdiet augue quis tellus.</p>
   </div>
 
 </article>
