initial navigation Sass build and floating elements added. Changed grid to use a mixin.

--- a/assets/sass/centurion.sass
+++ b/assets/sass/centurion.sass
@@ -18,6 +18,8 @@ body
 @import "core/normalize"
 @import "core/grid"
 
+@include column-grid
+
 @import "core/colors"
 @import "core/buttons"
 @import "core/badges"
@@ -25,7 +27,9 @@ body
 @import "core/layout"
 @import "core/tables"
 @import "core/typography"
+@import "core/navigation"
 
+@include float-elements
 
 // Clearfix
 %clearfix
