added pre and post classes (future) and orange color updated

--- a/assets/sass/core/_config.sass
+++ b/assets/sass/core/_config.sass
@@ -23,6 +23,8 @@ $mobile-grid-class: mobile
 
 $push-class: push
 $pull-class: pull
+//$pre-class: pre
+//$post-class: post
 
 
 // Centurion - Language Support
@@ -71,7 +73,7 @@ $dark-green: darken($green, 20%)
 $light-green: lighten($green, 30%)
 
 $orange: #FE9300
-$dark-orange: darken($orange, 20%)
+$dark-orange: darken($orange, 10%)
 $light-orange: lighten($orange, 30%)
 
 
